mansagens feedback da voz na tela

--- a/assets/styles/components/_body.scss
+++ b/assets/styles/components/_body.scss
@@ -15,6 +15,9 @@ body {
     h1 {
         font-size: $tamanho-texto * 5;
     }
+    h2 {
+        font-size: $tamanho-texto * 4;
+    }
     h3 {
         font-size: $tamanho-texto * 2;
         padding: 2rem;
