--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -30,4 +30,14 @@ body .mensagem .box {
   font-size: 4rem;
   margin: 1.5rem 0;
   padding: 3rem;
+}
+body .btn-jogar {
+  padding: 1rem 2rem;
+  font-size: 1rem;
+  border: none;
+  background-color: #D36B00;
+  color: #42032C;
+  border-radius: 5px;
+  margin-top: 1rem;
+  cursor: pointer;
 }/*# sourceMappingURL=style.css.map */
